lib/queue-msg-macro/tests/unnamed-struct-no-type.stderr
error: only newtype structs are supported
 --> tests/unnamed-struct-no-type.rs:4:15
  |
4 | struct Unnamed();
  |               ^^
